[package]
name = "redis_full_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.13", features = ["derive"]}
redis = {version = "0.22.3",default-features = false,features = ["cluster"]}
env_logger = {version = "0.10.0",default-features = false}
log = {version = "0.4.16",default-features = false}
regex = {version="1.7.3"}
lazy_static ="1.4.0"

anyhow = "1.0.70"
rusqlite = {version = "0.29.0",features = ["bundled"]}